--- a/.github/workflows/Lean OpenWrt.yml
+++ b/.github/workflows/Lean OpenWrt.yml
@@ -6,13 +6,13 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Lean OpenWrt
+name: Build R4S OpenWrt 
 
 on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron: 0 17 * * *
+    - cron: 0 18 * * *
   # watch:
   #   types: started
 
@@ -30,7 +30,7 @@ env:
 jobs:
   Build:
     runs-on: ubuntu-20.04
-    if: github.repository == 'MedyMa/NanoPi-R4S'
+    if: github.repository == 'N198XMAX/NanoPi-R4S'
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
@@ -177,7 +177,7 @@ jobs:
   Upload:
     needs: [Build]
     runs-on: ubuntu-20.04
-    if: github.repository == 'MedyMa/NanoPi-R4S'
+    if: github.repository == 'N198XMAX/NanoPi-R4S'
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -241,20 +241,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASES_TOKEN }}
         with:
-          name: ${{ steps.tag.outputs.release_date }} Lean OpenWrt
+          name: ${{ steps.tag.outputs.release_date }}  R4S OpenWrt
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*
-
-      - name: Build & Push Docker Image To Dockerhub
-        run: |
-          cd openwrt/bin/targets/$TARGET/$SUBTARGET/
-          docker import openwrt-rockchip-armv8-friendlyarm_nanopi-r4s-rootfs.tar.gz ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:lean
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:lean
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:lean ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:latest
-
+     
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
         with:
@@ -268,7 +259,7 @@ jobs:
           keep_latest: 3
           delete_tags: true
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASES_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Delete Artifacts
         uses: geekyeggo/delete-artifact@v1
