--- a/.github/workflows/My Actions.yml
+++ b/.github/workflows/My Actions.yml
@@ -12,7 +12,7 @@
 
 #=================================================
 
-name: Lean OpenWrt
+name: R4S OpenWrt
 
 on:
 
@@ -22,7 +22,7 @@ on:
 
   schedule:
 
-    - cron: 0 17 * * 5
+    - cron: 0 18 * * 5
 
   # watch:
 
